# PartII-Project

./: .gitignore  .gitmodules  README.md  ideas.txt
Analysis/BadInline/: bad-inline-2.csv  bad-inline.csv  inline_plot_bad.m  out-bad-inline.csv
Analysis/CodeSize/: codeSize.m  out-bench-countcode.csv
Analysis/FibBench/: Fib.csv.csv  GHC_Fib1_35.csv  JVHC_Fib1_35.csv  nativeJava.csv  plotter_fib.m
Analysis/GCTimeStackHeap/: gctshPlot.m  mem_usageplus-newCalc.csv  mem_usageplus-zoomin.csv  mem_usageplus.csv  memory_gc_stack_image_inv-2.csv  memory_gc_stack_image_inv-3.csv  memory_gc_stack_image_inv.csv
Analysis/GHC_Inline/: TimeNoInline-F.csv  TimeWithInline.csv  ghc_inline_plot.m
Analysis/Inline/: inline-out-F.csv  inline-out-summed.csv  inline-out.csv  inline-out_1.csv  inline_out.csv  inline_plot.m  total_GC.csv
Analysis/Matlab/CompilerBench/: plotStageGraph.m
Analysis/StackGrowth/: memory_gc_stack_image_inv-s0.csv  octave-workspace  plot_stack_growth.m
Analysis/TimeInGC/: TimeExpGHC.csv  TimeExpJVHC.csv  plot_exp.m
Analysis/TimeTIExp/: ghc_fit.m  out.tex  plot_exp.m
Analysis/etaBench/: Main.hs  etaBench.cabal
Analysis/tex/: doc.tex  narrative.tex
Compilation/: bytecodetranslation.tex
InformalSemantics/: informal_semantics.tex
JVHC/JVHC/: .gitmodule  JVHC.cabal  LICENSE  debug.old  stack.yaml  todo.txt
JVHC/JVHC/bench/: Benchmark.hs  Main.hs
JVHC/JVHC/bench/BenchCompiler/: BenchCodeGen.hs  BenchCompiler.hs  BenchDesugar.hs  BenchInlining.hs  BenchParsing.hs  BenchProgams.hs  BenchSystemF.hs  BenchTI.hs
JVHC/JVHC/bench/CodeSize/: CountCodeSize.hs
JVHC/JVHC/bench/CodeSizeGHC/: allProgs.hs  evenOdd.hs  fib.hs  listProgs.hs  testN.hs
JVHC/JVHC/bench/CountConstructs/: CountProg.hs  OutputParser.hs
JVHC/JVHC/bench/GHC_TI/: TITest.hs  runGHC.sh
JVHC/JVHC/bench/MemoryUsage/: GCCount.hs  MemUsageBench.hs  MemUsageParser.hs  MemUsageTypes.hs
JVHC/JVHC/bench/Parser/: Helpers.hs
JVHC/JVHC/bench/Printing/: CSVPrint.hs
JVHC/JVHC/bench/TimeGHCProgram/: RunFibo.hs  RunTestN.hs
JVHC/JVHC/bench/TimeProgram/: RunBadInlineBench.hs  RunFibo.hs  RunInlineBench.hs  RunProgram.hs  RunSumN.hs  TimeRunningParser.hs
JVHC/JVHC/bench/TimeTI/: TimeTI.hs
JVHC/JVHC/java/BuildIn/: Bind0.java  Bind1.java  Bool.java  CharThunk.java  False.java  IO.java  IntThunk.java  ObjThunk.java  Return.java  Seq0.java  Seq1.java  Thunk.java  True.java  Unit.java  dec.java  getChar.java  intEq0.java  intEq1.java  intLT0.java  intLT1.java  intToChar.java  mod0.java  mod1.java  multiply0.java  multiply1.java  neg.java  plus0.java  plus1.java  putChar.java  putInt.java  putNewLine.java  subtract0.java  subtract1.java  thunkRemover.java
JVHC/JVHC/src/: Pat.hs
JVHC/JVHC/src/CodeGen/: CGCustomDataType.hs  CGFileWriter.hs  CGHelper.hs  CGLit.hs  CGMain.hs  CGMaxStackHeight.hs  CGMonad.hs  CGTest.hs  CGThunkCounter.hs  CodeGen.hs  CodePrint.hs  JInterfaces.hs  JTypes.hs  JVMVersion.hs  Test.hs  TypeToJType.hs
JVHC/JVHC/src/CoreAST/: BuildInFunctions.hs  CoreAST.hs  CoreData.hs  CoreExpr.hs  CoreProgram.hs  DataCon.hs  DataType.hs  Kind.hs  Literal.hs  RenameCoreExpr.hs  RenameMonad.hs  TScheme.hs  Types.hs  Var.hs
JVHC/JVHC/src/Desugar/: DAType.hs  DDataDecl.hs  DExpr.hs  DMain.hs  DPat.hs  DTopDecls.hs  DTypes.hs  FreeVariables.hs
JVHC/JVHC/src/Infer/: Assumption.hs  BuildInFunctionTypes.hs  BuildInTypes.hs  CoreExprFixer.hs  CoreExprSubst.hs  Id.hs  KAssumption.hs  KIMain.hs  KIMonad.hs  KSubst.hs  KUnify.hs  Scheme.hs  Subst.hs  TILit.hs  TIM.hs  TIMain.hs  TIPat.hs  TIProgram.hs  TyAppFixer.hs  TyFixerMonad.hs  Unify.hs
JVHC/JVHC/src/Opt/: InlineMonad.hs  Inlining.hs
JVHC/JVHC/src/Parsing/: AST.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.info  Parser.y  ParsingAST.hs  Tester.hs  test.txt
JVHC/JVHC/src/Pipeline/: Compiler.hs
JVHC/JVHC/src/Printing/: PPrint.hs  PPrintTypes.hs
JVHC/JVHC/src/SampleProg/: BadInlineProg.hs  EvenOdd.hs  Fib.hs  InlineProg.hs  ListProgs.hs  Pairs.hs  ProgMaker.hs  Programs.hs
JVHC/JVHC/src/Testing/: Lenses.hs
JVHC/JVHC/test/: Spec.hs  TestConidAndVaridLexer.hs  TestLiteralLexer.hs
JVHC/JVHC/test/Desugar/: TestDType.hs  TestDesugar.hs  TestFreeVariables.hs
JVHC/JVHC/test/LexerTest/: TestCommentLexer.hs  TestConidAndVaridLexer.hs  TestLexer.hs  TestLiteralLexer.hs
JVHC/JVHC/test/OptTest/: TestOpt.hs
JVHC/JVHC/test/ParserTest/: TestDeclParser.hs  TestExpParser.hs  TestFullParser.hs  TestGendecl.hs  TestParser.hs  TestTopDeclParser.hs
JVHC/JVHC/test/TI/: TIExpr.hs  TIFixer.hs  TestTI.hs
JVHC/JVHC/test/TestProg/: evenOdd.hs  fibNN.hs  fibo.bhs  sumN.hs  test.hs  test.jhs
Logs/: 2016-10-18.mlog  2016-10-23.mlog  2016-10-24.mlog  2016-10-27.mlog  2016-10-29.mlog  2016-11-13.mlog  2016-11-21.mlog  2016-11-29.mlog  2017-01-21.mlog
Phase1/: SelectionStatusReport.txt
Phase2/: Phase2.tex  proposal.tex  refs.bib
ProgressReport/: ProRefs.bib  progressreport.tex
Typing/: refs.bib  typing.tex
diss/: diss.tex  refs.bib
diss/progs/: BadInlineProg.hs  fib.hs  gamePlay.hs  testN.hs  tiExpr.hs
diss/tex/bytecodetranslation/: bytecodetranslation.tex
diss/tex/conclusion/: conc.tex
diss/tex/evaluation/: eval.tex
diss/tex/evaluation/graphs/: inlinePlot.tex  inlinePlotComplex.tex  memUsed.tex  plotBadInline.tex  plotCallStackGrowth.tex  plotCodeSize.tex  plotFibRunTime.tex  plotStage.tex  tiTime.tex
diss/tex/evaluation/proof/: thunkProof.tex
diss/tex/implementation/: impl.tex
diss/tex/implementation/workStages/: workStageGantt.tex
diss/tex/introduction/: intro.tex
diss/tex/preparation/: prep.tex
diss/tex/preparation/stageDiagram/: stageDiagram.tex
diss/tex/proposal/: proposal.tex
howToWrite/: notes.txt
