name:                JVHC
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/curdled/JVHC#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Isaacs
maintainer:          josi2@cam.ac.uk
copyright:           None
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/Parsing
  exposed-modules:     AST, Parser, Lexer
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1
  default-language:    Haskell2010
  build-tools:         alex, happy

executable JVHC-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , JVHC
  default-language:    Haskell2010

test-suite JVHC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/LexerTest, test/ParserTest, test
  main-is:             Spec.hs
  build-depends:       base
                     , JVHC
                     , HUnit >= 1.3.0
  other-modules:       TestCommentLexer
                     , TestConidAndVaridLexer
                     , TestLiteralLexer
                     , TestDeclParser
                     , TestExpParser
                     , TestFullParser
                     , TestGendecl
                     , TestParser
                     , TestLexer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/curdled/JVHC
