name:                JVHC
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/curdled/JVHC#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Isaacs
maintainer:          josi2@cam.ac.uk
copyright:           None
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Parsing.ParsingAST
                     , Parsing.Parser
                     , Parsing.Lexer
                     , CoreAST.Types
                     , CoreAST.Kind
                     , CoreAST.CoreExpr 
                     , CoreAST.Var
                     , CoreAST.Literal
                     , CoreAST.DataCon
                     , Printing.PPrint
                     , Printing.PPrintTypes
                     , Desugar.DExpr
                     , Desugar.DTypes
                     , Desugar.DPat
                     , Desugar.DAType
                     , Desugar.DDataDecl
                     , Desugar.DMain
                     , Desugar.DTopDecls
                     , Desugar.FreeVariables
                     , Infer.Id
                     , Infer.Subst
                     , Infer.Unify
                     , Infer.Scheme
                     , Infer.Assumption
                     , Infer.TIM
                     , Infer.TILit
                     , Infer.TIPat
                     , Infer.TIMain
                     , Infer.TIProgram
                     , Infer.KSubst
                     , Infer.KUnify
                     , Infer.KAssumption
                     , Infer.KIMonad
                     , Infer.KIMain
                     , Infer.CoreExprSubst
                     , Infer.CoreExprFixer
                     , Pipeline.Compiler
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1
                     , mtl
                     , pretty
                     , containers
                     , codec-jvm 
  default-language:    Haskell2010
  build-tools:         alex, happy

executable JVHC-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , JVHC
  default-language:    Haskell2010

test-suite JVHC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , JVHC
                     , HUnit >= 1.3.0
  other-modules:       LexerTest.TestCommentLexer
                     , LexerTest.TestConidAndVaridLexer
                     , LexerTest.TestLiteralLexer
                     , LexerTest.TestLexer
                     , ParserTest.TestDeclParser
                     , ParserTest.TestExpParser
                     , ParserTest.TestFullParser
                     , ParserTest.TestGendecl
                     , ParserTest.TestParser
                     , Desugar.TestDType 
                     , Desugar.TestFreeVariables
                     , Desugar.TestDesugar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/curdled/JVHC
