name:                JVHC
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/curdled/JVHC#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Isaacs
maintainer:          josi2@cam.ac.uk
copyright:           None
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Parsing.ParsingAST
                     , Parsing.Parser
                     , Parsing.Lexer
                     , CoreAST.Types
                     , CoreAST.Kind
                     , CoreAST.TScheme
                     , CoreAST.CoreExpr 
                     , CoreAST.Var
                     , CoreAST.Literal
                     , CoreAST.DataCon
                     , CoreAST.BuildInFunctions
                     , CoreAST.RenameMonad
                     , CoreAST.RenameCoreExpr
                     , SampleProg.Fib
                     , SampleProg.EvenOdd
                     , SampleProg.Pairs
                     , SampleProg.ListProgs
                     , SampleProg.ProgMaker
                     , SampleProg.InlineProg
                     , SampleProg.BadInlineProg
                     , SampleProg.Programs
                     , Printing.PPrint
                     , Desugar.DExpr
                     , Desugar.DTypes
                     , Desugar.DPat
                     , Desugar.DAType
                     , Desugar.DDataDecl
                     , Desugar.DMain
                     , Desugar.DTopDecls
                     , Desugar.FreeVariables
                     , Infer.Id
                     , Infer.Subst
                     , Infer.Unify
                     , Infer.Scheme
                     , Infer.Assumption
                     , Infer.BuildInTypes
                     , Infer.BuildInFunctionTypes
                     , Infer.TIM
                     , Infer.TILit
                     , Infer.TIPat
                     , Infer.TIMain
                     , Infer.TIProgram
                     , Infer.KSubst
                     , Infer.KUnify
                     , Infer.KAssumption
                     , Infer.KIMonad
                     , Infer.KIMain
                     , Infer.CoreExprSubst
                     , Opt.InlineMonad
                     , Opt.Inlining
                     , Pipeline.Compiler
                     , Infer.TyFixerMonad
                     , Infer.TyAppFixer
                     , CodeGen.JVMVersion
                     , CodeGen.JTypes
                     , CodeGen.JInterfaces
                     , CodeGen.TypeToJType
                     , CodeGen.CGHelper
                     , CodeGen.CGMonad
                     , CodeGen.CGThunkCounter
                     , CodeGen.CGMaxStackHeight
                     , CodeGen.CGCustomDataType
                     , CodeGen.CodeGen
                     , CodeGen.CGLit
                     , CodeGen.CGMain
                     , CodeGen.CGFileWriter
                     , CodeGen.CodePrint
                     , CodeGen.Test
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1
                     , mtl
                     , pretty
                     , containers
                     , text
                     , bytestring
                     , deepseq
                     , MissingH
                     , codec-jvm 
  default-language:    Haskell2010
  build-tools:         alex, happy

executable JVHC-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , JVHC
  default-language:    Haskell2010

executable JVHC-bench
  hs-source-dirs:      bench
  main-is:             Main.hs
  other-modules:       TimeProgram.RunProgram
                     , TimeProgram.RunSumN
                     , TimeProgram.RunFibo
                     , TimeTI.TimeTI
                     , BenchCompiler.BenchParsing
                     , BenchCompiler.BenchDesugar
                     , BenchCompiler.BenchTI
                     , BenchCompiler.BenchSystemF
                     , BenchCompiler.BenchInlining
                     , BenchCompiler.BenchCodeGen
                     , BenchCompiler.BenchCompiler
                     , CountConstructs.OutputParser
  ghc-options:         -threaded
  build-depends:       base
                     , JVHC
                     , process
                     , directory
                     , text
                     , filepath
                     , hstats
                     , criterion
                     , deepseq
                     , codec-jvm
                     , MissingH
                     , lens
                     , parsec
  default-language:    Haskell2010

test-suite JVHC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , JVHC
                     , containers
                     , HUnit >= 1.3.0
  other-modules:       LexerTest.TestCommentLexer
                     , LexerTest.TestConidAndVaridLexer
                     , LexerTest.TestLiteralLexer
                     , LexerTest.TestLexer
                     , ParserTest.TestDeclParser
                     , ParserTest.TestExpParser
                     , ParserTest.TestFullParser
                     , ParserTest.TestGendecl
                     , ParserTest.TestParser
                     , Desugar.TestDType 
                     , Desugar.TestFreeVariables
                     , Desugar.TestDesugar
                     , TI.TIExpr
                     , TI.TestTI
                     , TI.TIFixer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/curdled/JVHC
